fix for horizontal scroll on desktop (Safari) & mobile (all)

--- a/src/scss/new-flavor.scss
+++ b/src/scss/new-flavor.scss
@@ -976,10 +976,15 @@ blockquote .author {
     padding-bottom: 0px !important;
     display: flex;
     flex-direction: column;
+
+    @include responsive(phone) {
+        max-width: 100vw !important;
+    }
 }
 
 .container.floating-rocks {
     width: 100%;
+    max-width: 100%;
     height: 500px;
     position: relative;
 }
@@ -1151,6 +1156,7 @@ blockquote .author {
     top: 160px;
     left: 650px;
 }
+
 .bgVideo {
     margin-top: 20px;
     width: 100%;
@@ -2120,142 +2126,178 @@ blockquote .author {
 }
 
 .company-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  max-width: 920px;
-  position: relative;
-
-  .company-rocks {
-    animation: levitate-a 7000ms ease-in-out infinite;
-
-    &:nth-child(1) {
-      animation-delay: 100ms;
-    }
-
-    &:nth-child(2) {
-      animation: levitate-b 7555ms ease-in-out infinite;
-      animation-delay: 400ms;
-    }
-
-    &:nth-child(3) {
-      animation: levitate-c 7965ms ease-in-out infinite;
-      animation-delay: 220ms;
-    }
-
-    &:nth-child(4) {
-      animation: levitate-b 7555ms ease-in-out infinite;
-      animation-delay: 60ms;
-    }
-
-    &:nth-child(5) {
-      animation: levitate-c 7555ms ease-in-out infinite;
-      animation-delay: 10ms;
-    }
-
-    &:nth-child(6) {
-      animation: levitate-a 7965ms ease-in-out infinite;
-      animation-delay: 80ms;
-    }
-
-    &:nth-child(7) {
-      animation: levitate-d 7555ms ease-in-out infinite;
-      animation-delay: 140ms;
-    }
-
-    &:nth-child(8) {
-      animation: levitate-b 7555ms ease-in-out infinite;
-      animation-delay: 320ms;
-    }
-
-    @keyframes levitate-a {
-      0% { transform: translateY(-13px) }
-      50% { transform: translateY(5px) }
-      100% { transform: translateY(-13px) }
-    }
-
-    @keyframes levitate-b {
-      0% { transform: translateY(0px) }
-      50% { transform: translateY(16px) }
-      100% { transform: translateY(0px) }
-    }
-
-    @keyframes levitate-c {
-      0% { transform: translateY(-14px) }
-      50% { transform: translateY(5px) }
-      100% { transform: translateY(-14px) }
-    }
-
-    @keyframes levitate-d {
-      0% { transform: translateY(-20px) }
-      50% { transform: translateY(12px) }
-      100% { transform: translateY(-20px) }
-    }
-  }
-
-  @include responsive(phone) {
+    display: flex;
     flex-direction: row;
-    max-width: 150%;
-    width: 130%;
-    margin-left: -45px;
-    overflow: hidden;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
+    max-width: 920px;
+    position: relative;
 
     .company-rocks {
-      margin-left: 0px !important;
+        animation: levitate-a 7000ms ease-in-out infinite;
+
+        &:nth-child(1) {
+            animation-delay: 100ms;
+        }
+
+        &:nth-child(2) {
+            animation: levitate-b 7555ms ease-in-out infinite;
+            animation-delay: 400ms;
+        }
+
+        &:nth-child(3) {
+            animation: levitate-c 7965ms ease-in-out infinite;
+            animation-delay: 220ms;
+        }
+
+        &:nth-child(4) {
+            animation: levitate-b 7555ms ease-in-out infinite;
+            animation-delay: 60ms;
+        }
+
+        &:nth-child(5) {
+            animation: levitate-c 7555ms ease-in-out infinite;
+            animation-delay: 10ms;
+        }
+
+        &:nth-child(6) {
+            animation: levitate-a 7965ms ease-in-out infinite;
+            animation-delay: 80ms;
+        }
+
+        &:nth-child(7) {
+            animation: levitate-d 7555ms ease-in-out infinite;
+            animation-delay: 140ms;
+        }
+
+        &:nth-child(8) {
+            animation: levitate-b 7555ms ease-in-out infinite;
+            animation-delay: 320ms;
+        }
+
+        @keyframes levitate-a {
+            0% {
+                transform: translateY(-13px)
+            }
+
+            50% {
+                transform: translateY(5px)
+            }
+
+            100% {
+                transform: translateY(-13px)
+            }
+        }
+
+        @keyframes levitate-b {
+            0% {
+                transform: translateY(0px)
+            }
+
+            50% {
+                transform: translateY(16px)
+            }
+
+            100% {
+                transform: translateY(0px)
+            }
+        }
+
+        @keyframes levitate-c {
+            0% {
+                transform: translateY(-14px)
+            }
+
+            50% {
+                transform: translateY(5px)
+            }
+
+            100% {
+                transform: translateY(-14px)
+            }
+        }
+
+        @keyframes levitate-d {
+            0% {
+                transform: translateY(-20px)
+            }
+
+            50% {
+                transform: translateY(12px)
+            }
+
+            100% {
+                transform: translateY(-20px)
+            }
+        }
     }
-  }
+
+    @include responsive(phone) {
+        flex-direction: row;
+        max-width: 100vw;
+        width: 130%;
+        margin-left: -30px;
+        //        overflow: hidden;
+        align-items: center;
+        justify-content: center;
+
+        .company-rocks {
+            margin-left: 0px !important;
+        }
+    }
 }
 
 .hero {
-  .overlay-image {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    transition: 900ms ease-in-out;
-    opacity: 1;
+    .overlay-image {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        transition: 900ms ease-in-out;
+        opacity: 1;
 
-    &.next {
-      z-index: 1;
+        &.next {
+            z-index: 1;
+        }
+
+        &.current {
+            z-index: 2;
+        }
+
+        &.is-exiting {
+            opacity: 0;
+            mix-blend-mode: overlay;
+        }
     }
 
-    &.current {
-      z-index: 2;
+    .hero-body {
+        z-index: 5;
     }
 
-    &.is-exiting {
-      opacity: 0;
-      mix-blend-mode: overlay;
+    .primary-text {
+        transition: 500ms ease-in-out;
+        opacity: 1;
+
+        &.is-exiting {
+            opacity: 0;
+        }
     }
-  }
 
-  .hero-body {
-    z-index: 5;
-  }
+    .btn-container {
+        transition: 500ms ease-in-out;
+        opacity: 1;
+        transform: translateY(0px);
 
-  .primary-text {
-    transition: 500ms ease-in-out;
-    opacity: 1;
-
-    &.is-exiting {
-      opacity: 0;
+        &.is-exiting {
+            opacity: 0;
+            transform: translateY(24px);
+        }
     }
-  }
+}
 
-  .btn-container {
-    transition: 500ms ease-in-out;
-    opacity: 1;
-    transform: translateY(0px);
-
-    &.is-exiting {
-      opacity: 0;
-      transform: translateY(24px);
-    }
-  }
+.no-overflow {
+    overflow-x: hidden;
 }
